--- a/zongheanli.html
+++ b/zongheanli.html
@@ -24,6 +24,10 @@
                 <button id="filterActive">未完成</button>
                 <button id="filterCompleted">已完成</button>
             </div>
+            <div class="task-sorts">
+                <button id="sortByName">按名字排序</button>
+                <button id="sortByDate">按日期排序</button>
+            </div>
         </div>
     </div>
     <script src="./js/app1.js"></script>
