--- a/zongheanli.html
+++ b/zongheanli.html
@@ -9,13 +9,13 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="./img/syxy.png" alt="" class="logo">
+            <img src="./img/pic2.png" alt="" class="logo">
             <h1>任务管理系统</h1>
         </div>
 
         <div class="input-seciton">
-            <input type="text" id="taskInput" placeholder="请输入新任务....">
-            <button id ="addBtn">添加任务</button>
+            <input type="text" id="taskInput" placeholder="请输入新任务.....">
+            <button id="addBtn">添加任务</button>
         </div>
 
         <div class="task-controls">
@@ -29,6 +29,10 @@
                 <button id="sortByDate">按日期排序</button>
             </div>
         </div>
+        <ul id="taskList">
+
+        </ul>
+        <div class="stats" id="status"></div>
     </div>
     <script src="./js/app1.js"></script>
 </body>
