--- a/axios.html
+++ b/axios.html
@@ -96,21 +96,42 @@
     <!-- 引入Axios库 -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script>
-        document.getElementById('fetchButton').addEventListener('click', function() {
+        //防抖函数
+        function debounce(func, delay) {
+            let timer;
+            return function() {
+                clearTimeout(timer);
+                timer = setTimeout(() => {
+                    func.apply(this, arguments);
+                }, delay);
+            };
+        }
+        //节流函数
+        function throttle(func, delay) {
+            let lastTime = 0;
+            return function() {
+             const now = new Data().getTime();   
+             if (now - lastTime >= delay) {
+                 func.apply(this, arguments);
+                 lastTime = now;
+                }
+            }
+        }
+        document.getElementById('fetchButton').addEventListener('click', debounce(function() {
             axios.get('https://s5.360game.360.cn/to5/mini/v21/category.html').then(function(res){
                 console.log(res.data.data, '1111111111111111111111111111111');
                 const users = res.data.data;
                 const resultDiv = document.getElementById('result');
-                resultDiv.innerHTML = '<h2>Users:Found</h2><ul>' + users.map(user =>
-                     `<li>${user.name}</li>`).join('');
+                resultDiv.innerHTML = '<h2>Users:Found</h2><ul>'
+                    + users.map(user => `<li>${user.name}</li>`).join('');
             })
-            .catch(function(err) {
-                console.log(err)
-            })
-        })
+            .catch(function(error) {
+
+            });
+        },1000));
 
         // POST 请求示例----------promise
-        document.getElementById('postButton').addEventListener('click', function() {
+        document.getElementById('postButton').addEventListener('click', throttle(function() {
             const title = document.getElementById('titleInput').value || '默认标题';
             const body = document.getElementById('bodyInput').value || '默认内容';
             const postData = {
@@ -129,12 +150,11 @@
                 `;
             }).catch(function(err){
                 console.log(err)
-            })
-                    
-        })
+            });                    
+        },1000))
 
         //
-        document.getElementById('asyncFetchButton').addEventListener('click', async function() {
+        document.getElementById('asyncFetchButton').addEventListener('click', debounce(async function() {
             try {
                 const res = await axios.get('https://s5.360game.360.cn/to5/mini/v21/category.html');
                 console.log(res, '89898989')
@@ -145,13 +165,13 @@
                          `<li>${user.name}</li>`).join('');
                 }
             }catch(err) {
-                console.log(err)
+                console.log(err);
             }
-        })
+        },1000))
 
 
         //Async/Await POST 请求示例----------async/await
-        document.getElementById('asyncPostButton').addEventListener('click', async function() {
+        document.getElementById('asyncPostButton').addEventListener('click', throttle(async function() {
             try {
                 const title = document.getElementById('asyncTitleInput').value || '默认标题';
                 const body = document.getElementById('asyncBodyInput').value || '默认内容';
@@ -169,9 +189,9 @@
                 <p><strong>内容<strong>: ${res.data.body}</p>
                 `;
             }catch (err) {
-                console.log(err)
+                console.log(err);
             }
-        })
+        },1000))
     </script>
 </body>
 </html>
